syntax = "proto3";

package api_v1;
import "google/api/annotations.proto";
import "protocGenSwagger/options/annotations.proto";

option go_package = "/.;api_v1";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Auten Service"
    version: "1.0"
    contact: {
      name: "blueprint-roa-golang-grpc-gateway"
      url: "http://localhost:3031"
      email: "chat@robowealth.co.th"
    }
  }
  schemes: HTTP
  consumes: "application/json"
  produces: "application/json"
  responses: {
    key: "404"
    value: {
      description: "Returned when the resource does not exist."
      schema: {
        json_schema: {
          type: STRING
        }
      }
    }
  }
};

message Products {
  string name = 1;
  string detail = 2;
  int32 qty = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  string created_by = 6;
  string updated_by = 7;
}

message ProductsCreateRequest {
  string name = 1;
  string detail = 2;
  int32 qty = 3;
  string token = 4;
}

message ProductsCreateResponse{
  string result = 1;
}

message ProductsUpdateRequest {
  string name = 1;
  string detail = 2;
  int32 qtyUpdate = 3;
  int32  id = 4;
}

message ProductsUpdateResponse{
  string result = 1;
}


service ProductsService {
  rpc Create(ProductsCreateRequest) returns (ProductsCreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/products"
      body: "*",
    };
  }
  rpc Update(ProductsUpdateRequest) returns (ProductsUpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v1/products"
      body: "*",
    };
  }


}